[gd_scene load_steps=3 format=3 uid="uid://gmn2858b36l"]

[ext_resource type="Script" path="res://scenes/days/Day.gd" id="1_8a2sm"]
[ext_resource type="AudioStream" uid="uid://cd5vbkl5dr1fj" path="res://assets/music/Dawn of the first day -72 hours remain- [JsOPHyuAuT0].mp3" id="2_7r85q"]

[node name="Day" type="Node2D"]
script = ExtResource("1_8a2sm")
scene_to_change = "res://scenes/house.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 808.0
offset_bottom = 608.0
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 272.0
offset_top = 120.0
offset_right = 584.0
offset_bottom = 232.0
theme_override_font_sizes/normal_font_size = 60
text = "Dawn of
"

[node name="Day" type="RichTextLabel" parent="."]
offset_top = 192.0
offset_right = 800.0
offset_bottom = 360.0
theme_override_font_sizes/normal_font_size = 68
bbcode_enabled = true
text = "The First Day"

[node name="Hours" type="RichTextLabel" parent="."]
offset_left = 248.0
offset_top = 288.0
offset_right = 728.0
offset_bottom = 662.0
theme_override_font_sizes/normal_font_size = 30
text = "- 72 Hours Remain -"

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_7r85q")
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="fade" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0)
offset_right = 840.0
offset_bottom = 640.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="TimeBeforeChanging" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimeBeforeChanging" to="." method="_on_time_before_changing_timeout"]
